--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 
             <div class="box">
-                <img src="imageS/Indira-gandhi.webp">
+                <img src="images/Indira-gandhi.webp">
                 <h3>INDRA GANDHI</h3>
                 <P>Indira Gandhi, the first female prime minister of India, was a great leader. She served as
                     prime minister from 1966 until her assassination in 1977 by her bodyguards. She was the
